# FileTransfer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ChunkInfo.h  ClientFileTransfer.cpp  ClientFileTransfer.h  FileInfo.h  Home.qml  HomeForm.ui.qml  MyFileAPI.h  Page1Form.ui.qml  README.md  SocketsAPI.cpp  SocketsAPI.h  TestQtProject_en_US.ts  main.qml  qml.qrc
headers/: ChunkInfo.h  FileInfo.h  FileTransfer.h  Main.h  MyFileAPI.h  SafeQueue.h  SocketsAPI.h  TransferHandler.h  backend.h  backmain.h
sources/: ChunkInfo.cpp  FileInfo.cpp  Main.cpp  SafeQueue.cpp  SocketsAPI.cpp  TransferHandler.cpp  backend.cpp  backmain.cpp
